--- a/camp/src/index.html
+++ b/camp/src/index.html
@@ -1,39 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <base href="/">
-    <title>Champion camp Лучший летний спортивный лагерь!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
-
 <body>
-<div class="grid">
-
-<div class="upperHeader">
-    <p>ул.Лесная квартал 5 секция 9
-            </p>
-<img class="logo" src="assets/images/logo.jpg">
-<p>8-800-555-35-35</p>
-</div>
-<div class="menu">
-
-<ul>
-    <li>
-        <a routerLink="">главная</a>
-    </li>
-    <li>
-        <a routerLink="about">о лагере</a>
-    </li>
-    <li>
-        <a routerLink="sqads">отряды</a>
-    </li>
-    <li>
-        <a routerLink="buy">забронировать</a>
-    </li>
-    
-</ul>
-
-</div>
-</div>
-
-<app-root></app-root>
-
+    <app-root></app-root>
 </body>
-<router-outlet></router-outlet>
+</html>
